Fix alignment of "View" link on flags

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2029,7 +2029,7 @@
 				font-weight: 400;
 				left: 50%;
 				line-height: 2.25em;
-				margin: -1.25em 0 0 -3em;
+				margin: -1.25em 0 0 -2.75em;
 				opacity: 0;
 				padding: 0 1.5em;
 				position: absolute;
